# game-of-life

./: .gitignore  Cargo.toml  LICENSE  README.md  imgui.ini
map/: base.map  oscilliation.map  saved_map.txt  sirrobin.cells
src/: cell.rs  files.rs  lib.rs  main.rs
src/board/: cell.rs  mod.rs  row.rs
src/game_of_life/: files.rs  graphic_lib.rs  mod.rs
src/game_of_life/board/: mod.rs  row.rs
src/graphic/: constants.rs  mod.rs
src/graphic_interface/: constants.rs  imGuiWrapper.rs  im_gui_wrapper.rs  mod.rs
src/graphic_interface/camera/: mod.rs
tests/: map-import.rs
